--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -9,13 +9,13 @@ jobs:
         fetch-depth: 0
     - uses: yesolutions/mirror-action@master
       with:
-        REMOTE: 'https://gitlab.com/opensound-org/ast.git'
+        REMOTE: 'https://gitlab.com/opensound-org/est.git'
         REMOTE_NAME: gitlab
         GIT_USERNAME: czy29
         GIT_PASSWORD: ${{ secrets.GITLAB_PASSWORD }}
     - uses: yesolutions/mirror-action@master
       with:
-        REMOTE: 'https://gitee.com/opensound-org/ast.git'
+        REMOTE: 'https://gitee.com/opensound-org/est.git'
         REMOTE_NAME: gitee
         GIT_USERNAME: czy29
         GIT_PASSWORD: ${{ secrets.GITEE_PASSWORD }}
