--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,15 @@ all-features = true
 
 [dependencies]
 anyhow = "1.0.94"
+derive_more = { version = "1.0.0", features = ["display"] }
 indexmap = "2.7.0"
+ron = "0.8.1"
+serde = { version = "1.0.215", features = ["derive"] }
 thiserror = "2.0.4"
+tokio = { version = "1.42.0", features = ["rt"] }
 
 [dev-dependencies]
+tokio = { version = "1.42.0", features = ["macros"] }
 
 [build-dependencies]
 version_check = "0.9.5"
