--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,10 @@ ron = "0.8.1"
 serde = { version = "1.0.216", features = ["derive"] }
 thiserror = "2.0.6"
 tokio = { version = "1.42.0", features = ["rt"] }
+tokio-util = { version = "0.7.13", features = ["rt"] }
 
 [dev-dependencies]
-tokio = { version = "1.42.0", features = ["macros"] }
+tokio = { version = "1.42.0", features = ["macros", "time"] }
 
 [build-dependencies]
 version_check = "0.9.5"
